# enigma2-wetek

./: configure.ac  mytest.py
data/: keymap.ntr  keymap.xml  menu.xml
lib/base/: filepush.cpp
lib/driver/: rcinput.cpp
lib/dvb/: amldecoder.cpp  amldecoder.h  demux.cpp  dvb.cpp  dvb.h  frontend.cpp  volume.cpp
lib/gdi/: fb.h
lib/python/Components/: AVSwitch.py  About.py  GUISkin.py  Lcd.py  MovieList.py  UsageConfig.py  VfdSymbols.py
lib/python/Components/Converter/: ServiceName.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/LDteam/: ExtraActionBox.py  LdAbout.py  LdBlue.py  LdDevice.py  LdDeviceManager.py  LdFormat.py  LdNetworkSetup.py  LdPlugin.py  LdRestartNetwork.py  LdScripts.py  LdServ.py  LdSet.py  LdSwapManager.py  Ldsundtek.py  MountManager.py  ScriptRunner.py  plugin.py
lib/python/Plugins/Extensions/RCUSelect/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/RCUSelect/conf/: Makefile.am  keymap.orig.xml
lib/python/Plugins/Extensions/StartKodi/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/StartKodi/meta/: Makefile.am  plugin_startkodi.xml
lib/python/Plugins/Extensions/USBsafe/: Makefile.am  plugin.py
lib/python/Screens/: About.py  BoxPortal.py  ButtonSetup.py  ChannelSelection.py  Ci.py  EpgSelection.py  InfoBar.py  InfoBarGenerics.py  MovieSelection.py  Satconfig.py  UserInterfacePositioner.py  VideoMode.py  VideoWizard.py
lib/python/Tools/: HardwareInfo.py
lib/service/: servicedvb.cpp  servicemp3.cpp  servicemp3.h
main/: Makefile.am
po/: es.po
tools/: enigma2.sh.in
(+8 files in other folders)
